--- a/maze.css
+++ b/maze.css
@@ -1,13 +1,12 @@
 /* create styles for the 2 types of terrain (walls and paths), it can be simple background colors for starter. */
-main {
-    display: grid;
-    grid-template-columns: repeat(13, 50px); 
-    /* gap: 3px;  */
-}
 
 main div{
     height: 50px;
     width: 50px;
+}
+
+.hidden-text {
+    display: none;
 }
 
 .walls{
@@ -25,9 +24,16 @@ main div{
 
 .starter{
     background-color: rgb(90, 157, 176);
-    border-radius: 50px;
+    border-radius: 20px;
+    height: 30px;
+    width: 30px;
+    justify-self: center;
 }
 
 .treasure{
     background-color: rgb(239, 247, 99);
+    border-radius: 10px;
+    height: 35px;
+    width: 45px;
+    justify-self: center;
 }
